--- a/index.html
+++ b/index.html
@@ -1,1 +1,301 @@
-<p>航母大机器</p>
+<!DOCTYPE html>
+<html lang="zh-CN">
+
+<head>
+    <meta charset="UTF-8">
+    <title>clash梯子官网-clash梯子官网节点-clash梯子节点</title>
+    <meta name="description" content="Clash局域网共享代理需在设置中启用「允许局域网连接」选项，如同为设备架设数字桥梁。当出现Clash局域网认证失败时，检查防火墙是否放行7890端口，并确保Clash安卓局域网代理已正确配置HTTP/Socks5双协议认证，避免设备间通信被拦截。">
+    <meta name="keywords" content="clash梯子官网,clash梯子官网节点,clash梯子节点">
+    <link rel="shortcut icon" href="favicon.ico">
+    <style>
+        :root {
+            --ember-core: #FF6B35;
+            --carbon-base: #2B2D42;
+            --ash-layer: #8D99AE;
+            --ice-accent: #4ECDC4;
+        }
+
+        .node-hub {
+            background: rgba(255,255,255,0.03);
+            border: 1px solid rgba(255,107,53,0.15);
+            padding: 2rem;
+            margin: 1.5rem;
+            border-radius: 12px;
+            transition: all 0.4s;
+            backdrop-filter: blur(5px);
+        }
+
+        .node-hub:hover {
+            border-color: var(--ember-core);
+            transform: translateY(-5px);
+        }
+
+        .access-tier {
+            background: rgba(255,255,255,0.05);
+            border: 2px solid transparent;
+            padding: 2.5rem;
+            margin: 2rem;
+            border-radius: 15px;
+            transition: all 0.4s;
+        }
+
+        .access-tier:hover {
+            border-color: var(--ice-accent);
+        }
+
+        .latency-gauge {
+            display: inline-block;
+            padding: 0.3rem 1rem;
+            border-radius: 20px;
+            background: rgba(78,205,196,0.15);
+            color: var(--ice-accent);
+        }
+    </style>
+    <style>
+        :root {
+            --ember-core: #FF6B35;
+            --carbon-base: #2B2D42;
+            --ash-layer: #8D99AE;
+            --ice-accent: #4ECDC4;
+        }
+
+        .gateway-nav {
+            background: rgba(43,45,66,0.97);
+            backdrop-filter: blur(10px);
+            padding: 1.2rem 10%;
+            position: sticky;
+            top: 0;
+            display: flex;
+            justify-content: space-between;
+            border-bottom: 1px solid rgba(255,107,53,0.2);
+        }
+
+        .access-point {
+            color: var(--ash-layer);
+            text-decoration: none;
+            margin: 0 2rem;
+            font-weight: 500;
+            transition: all 0.3s;
+            position: relative;
+        }
+
+        .access-point::before {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: var(--ember-core);
+            transition: width 0.3s;
+        }
+
+        .access-point:hover::before {
+            width: 100%;
+        }
+
+        .ignition-btn {
+            background: linear-gradient(135deg, var(--ember-core), #FF8C42);
+            color: white;
+            padding: 1rem 2.8rem;
+            border-radius: 35px;
+            font-weight: 600;
+            text-decoration: none;
+            transition: transform 0.3s;
+            box-shadow: 0 5px 20px rgba(255,107,53,0.3);
+            display: inline-block;
+        }
+
+        .ignition-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 7px 25px rgba(255,107,53,0.4);
+        }
+
+        .node-package {
+            background: rgba(255,255,255,0.03);
+            border: 1px solid rgba(255,107,53,0.15);
+            padding: 2.5rem;
+            margin: 2rem;
+            border-radius: 15px;
+            transition: all 0.4s;
+            backdrop-filter: blur(5px);
+        }
+
+        .node-package:hover {
+            border-color: var(--ember-core);
+            transform: translateY(-8px);
+            box-shadow: 0 12px 30px rgba(255,107,53,0.1);
+        }
+
+        .protocol-badge {
+            display: inline-block;
+            padding: 0.3rem 1rem;
+            border-radius: 20px;
+            background: rgba(78,205,196,0.15);
+            color: var(--ice-accent);
+            font-size: 0.9rem;
+        }
+    </style>
+</head>
+<nav class="gateway-nav">
+    <div id="Ojr0JQvttL">
+        <a href="#features" class="access-point">核心功能</a>
+        <a href="#protocols" class="access-point">支持协议</a>
+        <a href="#nodes" class="access-point">节点状态</a>
+        <a href="#clients" class="access-point">客户端</a>
+    </div>
+    <a href="https://china-vpn.cc" class="ignition-btn">立即注册</a>
+</nav>
+<!-- 首屏展示 -->
+<section style="padding: 8rem 10%; text-align: center; background: radial-gradient(circle at 75% 30%, var(--carbon-base) 40%, #1A1B23 100%);">
+    <h1 style="font-size: 3.5rem; margin-bottom: 1.5rem; background: linear-gradient(45deg, var(--ember-core), #FF9F1C); -webkit-background-clip: text; color: transparent;">
+        clash梯子官网
+    </h1>
+    <p style="font-size: 1.2rem; color: var(--ash-layer); margin-bottom: 3rem;">
+        clash梯子官网军用级加密传输 | 3000+动态节点 | 严格无日志政策
+    </p>
+    <div id="gS6z9MR8ne" style="display: flex; gap: 2rem; justify-content: center;">
+        <a href="https://china-vpn.cc" class="ignition-btn">72小时试用</a>
+        <a href="https://china-vpn.cc" class="ignition-btn" style="background: transparent; border: 2px solid var(--ember-core);">官网入口</a>
+    </div>
+</section>
+<!-- 协议支持 -->
+<section id="protocols" style="padding: 6rem 10%;">
+    <h2 style="text-align: center; font-size: 2.8rem; margin-bottom: 4rem; color: var(--ice-accent);">支持协议</h2>
+    <div id="edJwXkfZ1f" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem; max-width: 1200px; margin: 0 auto;">
+        <div id="BtyydvrSAs" class="node-package">
+            <span class="protocol-badge">WireGuard®</span>
+            <h3 style="color: var(--ember-core); margin: 1.5rem 0;">新一代隧道协议</h3>
+            <p>✔ clash梯子官网更快的连接速度</p>
+            <p>✔ 更低资源消耗</p>
+            <p>✔ 完美前向保密</p>
+        </div>
+        <div id="iOHlZyvb8S" class="node-package">
+            <span class="protocol-badge">ShadowTLS</span>
+            <h3 style="color: var(--ember-core); margin: 1.5rem 0;">混淆强化协议</h3>
+            <p>✔ clash梯子官网TLS流量伪装</p>
+            <p>✔ 深度包检测对抗</p>
+            <p>✔ 动态端口跳跃</p>
+        </div>
+    </div>
+</section>
+
+<body style="background: var(--carbon-base); color: #EDF2F4;">
+    <!-- 套餐方案 -->
+    <section id="plans" style="padding: 6rem 10%;">
+        <h2 style="text-align: center; font-size: 2.8rem; margin-bottom: 4rem; color: var(--ice-accent);">订阅方案</h2>
+        <div id="GAHRhe8bOT" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; max-width: 1200px; margin: 0 auto;">
+            <div id="xcE5KDG3gi" class="access-tier">
+                <h3 style="color: var(--ash-layer);">基础加速</h3>
+                <div id="0yKsATo8U4" style="font-size: 2.5rem; margin: 1.5rem 0; color: var(--ember-core);">$6.99<span style="font-size: 1rem; color: var(--ash-layer);">/月</span></div>
+                <ul style="list-style: none; text-align: left; line-height: 2.2rem;">
+                    <li>✓ clash梯子官网60+国家节点</li>
+                    <li>✓ 3台设备同时连接</li>
+                    <li>✓ 基础流媒体解锁</li>
+                    <li>✓ 100Mbps带宽</li>
+                </ul>
+                <a href="#" class="ignition-btn" style="display: block; margin-top: 2rem;">立即订阅</a>
+            </div>
+            <div id="NKAUPIW6E1" class="access-tier" style="border-color: var(--ember-core);">
+                <h3 style="color: var(--ember-core);">极速体验</h3>
+                <div id="sjipuRUnjU" style="font-size: 2.5rem; margin: 1.5rem 0; color: var(--ember-core);">$59.9<span style="font-size: 1rem; color: var(--ash-layer);">/年</span></div>
+                <ul style="list-style: none; text-align: left; line-height: 2.2rem;">
+                    <li>✓ 100+国家节点</li>
+                    <li>✓ 5台设备同时连接</li>
+                    <li>✓ 4K流媒体专线</li>
+                    <li>✓ 500Mbps带宽</li>
+                </ul>
+                <a href="#" class="ignition-btn" style="display: block; margin-top: 2rem; background: var(--ember-core);">推荐套餐</a>
+            </div>
+            <div id="X1yGoqJ4wa" class="access-tier">
+                <h3 style="color: var(--ice-accent);">clash梯子官网企业定制</h3>
+                <div id="dpwT5FgV6i" style="font-size: 2.5rem; margin: 1.5rem 0; color: var(--ice-accent);">定制方案</div>
+                <ul style="list-style: none; text-align: left; line-height: 2.2rem;">
+                    <li>✓ 专属私有节点</li>
+                    <li>✓ 无限设备连接</li>
+                    <li>✓ 企业级SLA保障</li>
+                    <li>✓ 专属技术支持</li>
+                </ul>
+                <a href="#" class="ignition-btn" style="display: block; margin-top: 2rem; background: var(--ice-accent); color: var(--carbon-base);">联系销售</a>
+            </div>
+        </div>
+    </section>
+    <!-- 实时节点状态 -->
+    <section id="nodes" style="padding: 6rem 10%; background: rgba(0,0,0,0.1);">
+        <h2 style="text-align: center; font-size: 2.8rem; margin-bottom: 4rem; color: var(--ice-accent);">全球节点状态</h2>
+        <div id="NDx3e4qu0T" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; max-width: 1400px; margin: 0 auto;">
+            <!-- 美国节点 -->
+            <div id="1AYOcO1iwi" class="node-hub">
+                <div id="sG74bpFfb0" style="display: flex; justify-content: space-between; align-items: center;">
+                    <h4 style="color: var(--ember-core);">🇺🇸 北美骨干网</h4>
+                    <div id="2xC1t8MFqc" style="display: flex; align-items: center;">
+                        <div id="lEWoupYphD" style="width: 12px; height: 12px; background: #00C853; border-radius: 50%; margin-right: 0.5rem;"></div>
+                        <span class="latency-gauge">延迟 38ms</span>
+                    </div>
+                </div>
+                <div id="r44kOaUBxF" style="margin: 1.5rem 0; height: 2px; background: rgba(255,255,255,0.1);"></div>
+                <p>▶ 洛杉矶 CN2 GIA</p>
+                <p>▶ 纽约 Enterprise级</p>
+                <p>▶ 达拉斯 10Gbps</p>
+                <p>▶ 迈阿密 拉美专线</p>
+            </div>
+            <!-- 日本节点 -->
+            <div id="VobjBOzw7X" class="node-hub">
+                <div id="MmlSQS9V51" style="display: flex; justify-content: space-between; align-items: center;">
+                    <h4 style="color: var(--ember-core);">🇯🇵 东亚网络</h4>
+                    <div id="4SxVlbS9SZ" style="display: flex; align-items: center;">
+                        <div id="cnnzqAKDxm" style="width: 12px; height: 12px; background: #00C853; border-radius: 50%; margin-right: 0.5rem;"></div>
+                        <span class="latency-gauge">延迟 52ms</span>
+                    </div>
+                </div>
+                <div id="R1jTiguUYr" style="margin: 1.5rem 0; height: 2px; background: rgba(255,255,255,0.1);"></div>
+                <p>▶ 东京 IIJ 专线</p>
+                <p>▶ 大阪 BGP混合</p>
+                <p>▶ 福冈 游戏优化</p>
+                <p>▶ 札幌 媒体中转</p>
+            </div>
+            <!-- 德国节点 -->
+            <div id="MxrDPnNNph" class="node-hub">
+                <div id="TyPiQK8qyT" style="display: flex; justify-content: space-between; align-items: center;">
+                    <h4 style="color: var(--ember-core);">🇩🇪 欧洲枢纽</h4>
+                    <div id="Od24OC2FFw" style="display: flex; align-items: center;">
+                        <div id="aNme66zKUN" style="width: 12px; height: 12px; background: #ffd600; border-radius: 50%; margin-right: 0.5rem;"></div>
+                        <span class="latency-gauge">延迟 89ms</span>
+                    </div>
+                </div>
+                <div id="MTVt6Z8z9o" style="margin: 1.5rem 0; height: 2px; background: rgba(255,255,255,0.1);"></div>
+                <p>▶ 法兰克福 10Gbps</p>
+                <p>▶ 柏林 BGP混合</p>
+                <p>▶ 慕尼黑 企业专线</p>
+                <p>▶ 汉堡 媒体中转</p>
+            </div>
+        </div>
+    </section>
+    <!-- 页脚 -->
+    <footer style="padding: 4rem 10%; background: rgba(0,0,0,0.3);">
+        <div id="hQdkI90cN3" style="max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(3, 1fr); gap: 3rem;">
+            <div id="JL65m9VZTo">
+                <h4 style="color: var(--ember-core); margin-bottom: 1.5rem;">clash梯子官网法律声明</h4>
+                <p><a href="#" style="color: var(--ash-layer); text-decoration: none;">隐私政策</a></p>
+                <p><a href="#" style="color: var(--ash-layer); text-decoration: none;">服务条款</a></p>
+            </div>
+            <div id="Z3gLk8G1sP">
+                <h4 style="color: var(--ice-accent); margin-bottom: 1.5rem;">clash梯子官网技术支持</h4>
+                <p>Telegram: @clash梯子官网_support</p>
+                <p>Email: support@clash梯子官网vpn.io</p>
+            </div>
+            <div id="knkcx8J5yj">
+                <h4 style="color: var(--ash-layer); margin-bottom: 1.5rem;">网络状态</h4>
+                <p>当前在线用户: 256,789</p>
+                <p>全球节点可用率: 99.98%</p>
+            </div>
+        </div>
+        <div id="ojArTVRX1p" style="border-top: 1px solid rgba(255,255,255,0.1); margin-top: 3rem; padding-top: 2rem; text-align: center; color: var(--ash-layer);">
+            <p>© 2023 clash梯子官网 Network | 用户行为应遵守当地法律法规</p>
+            <p style="margin-top: 1rem;">所有连接记录在断开时自动清除</p>
+        </div>
+    </footer>
+    <a href="/sitemap.xml">SiteMap</a>
+</body>
+
+</html> clash梯子官网地址 clash梯子官网入口 clash梯子官网节点 clash官方网站 clash加速器 clash节点订阅购买 小猫梯子clash 小猫clash官网 clash下载安卓 clash小猫官网正版下载
